Fix profile icon size on smallscreen

--- a/src/routes/PrimaryLayout/components/TopNav/TopNav.scss
+++ b/src/routes/PrimaryLayout/components/TopNav/TopNav.scss
@@ -97,7 +97,7 @@
     vertical-align: middle;
     margin-right: 15px;
     display: inline-block;
-    height: 28px;
+    // height: 28px;
     margin-right: 15px;
     text-decoration: none;
     cursor: pointer;
